2008-04-05  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c (on_geometry_changed),
	                  (on_property_changed): Fix the neo_me latitude
			  value, changing the sign, before saving to config. 

2008-04-05  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c (on_geometry_changed),
	                  (on_property_changed): Decide if neo_me has
			  existed. If not, create it first. Or it will not
			  show neo_me on map when got fixed and launching
			  diversity-nav first time. This is a bug
			  caused by revision 282. My bad!	
	* src/e_mod_nav.c (on_neo_other_geometry_changed): Add
	on_neo_other_geometry_changed function. It's the behavior for
	neo_other that is not the same with neo_me. 

2008-04-03  Jeremy Chang  <jeremy@openmoko.com>

	* configure.in,
	  data/config,
	  data/config/diversity-nav.cfg,
	  data/config/Makefile.am, 
	  data/Makefile.am: Add config directory and add default config
	  file.

	* src/e_mod_nav.c: Remember the fix position and viewport coordinate
	and scale last time so that can be used next time launching diversity-nav.

	* src/e_mod_config.[ch],
	  src/Makefile.am: Add config new/save interface. 


2008-04-01  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: If neo was already fixed while diversity starting
	up, change the skin of neo_me. 

2008-03-31  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c,
	src/e_ctrl.h: Improve self get and set interface

	* src/e_nav_dbus.c,
	src/e_nav_dbus.h: Improve tag share and sms sending interface

	* src/widgets/e_nav_textedit.c,
	src/widgets/e_nav_textedit.h,
	src/e_nav_item_location.c,
	src/e_mod_nav.c: Add Tag share function

	* src/widgets/e_nav_dialog.c: Don't strdup NULL string

2008-03-30  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c,
	  src/widgets/e_nav_textedit.[ch], 
	  data/themes/diversity_nav.edc: Replace the entry with EWL widgets.
	* src/e_mod_nav.c, 
	  src/e_nav_item_neo_other.[ch],