@@ -1,3 +1,5 @@
-lat = -24.837976
-scale = 127419.515625
-lon = 121.296394
+lat = 0.0
+scale = 77777.0
+lon = 0.0 
+neo_me_lat = 0.0
+neo_me_lon = 0.0
